--- a/app/src/main/res/layouts/reservations/layout/fragment_reservations.xml
+++ b/app/src/main/res/layouts/reservations/layout/fragment_reservations.xml
@@ -44,23 +44,35 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/btn_back_home"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:clickable="true"
+                    android:src="@drawable/ic_baseline_arrow_back_24" />
+
+                <TextView
+                    android:id="@+id/txt_id_sala"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="15dp"
+                    android:text="Visualizando reservas" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp">
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="2"
-                    android:backgroundTint="@android:color/darker_gray"
-                    android:text="Voltar"
-                    android:textSize="9sp" />
-
-            </LinearLayout>
+                android:layout_margin="5dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
