--- a/app/src/main/res/navigation/nav_reservations.xml
+++ b/app/src/main/res/navigation/nav_reservations.xml
@@ -7,5 +7,13 @@
     <fragment
         android:id="@+id/reservations"
         android:name="com.meicansoftware.gerenciasala.pages.reservations.fragments.reservations"
-        android:label="reservations" />
+        android:label="reservations" >
+        <action
+            android:id="@+id/action_reservations_to_home3"
+            app:destination="@id/home3" />
+    </fragment>
+    <fragment
+        android:id="@+id/home3"
+        android:name="com.meicansoftware.gerenciasala.pages.home.fragments.home"
+        android:label="home" />
 </navigation>
