--- a/app/src/main/res/layouts/events/layout/fragment_events.xml
+++ b/app/src/main/res/layouts/events/layout/fragment_events.xml
@@ -1,120 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.gridlayout.widget.GridLayout
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="200dp"
-        tools:layout_editor_absoluteY="-356dp">
+        android:background="@drawable/background">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
+    <View
+            android:id="@+id/registrationContainerComponents"
+            style="@style/RegistrationContainerComponents"
+            android:layout_height="450dp"
+            android:layout_marginTop="201dp"
+            android:layout_marginBottom="201dp"
+            android:background="#00FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.165"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical">
+    <EditText
+            android:id="@+id/edt_event_name"
+            style="@style/LoginEditText"
+            android:hint="Nome do evento"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toTopOf="@id/registrationContainerComponents"
+    />
 
-                <TextView
-                    android:id="@+id/text_name_user"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Maycon"
-                    android:textColor="@color/unimed_primary"
-                    android:textSize="24dp" />
+    <EditText
+            android:id="@+id/edt_event_description"
+            style="@style/LoginEditText"
+            android:hint="Descrição"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_event_name"
+    />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Saudações!"
-                    android:textColor="@color/unimed_primary"
-                    android:textSize="16dp" />
-            </LinearLayout>
+    <EditText
+            android:id="@+id/edt_people_capacity"
+            style="@style/LoginEditText"
+            android:hint="Quantidade de pessoas"
+            android:inputType="number"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_event_description"
+    />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp">
+    <EditText
+            android:id="@+id/edt_course_name"
+            style="@style/LoginEditText"
+            android:hint="Nome do curso"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_people_capacity"
+    />
 
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="32sp"
-                    android:layout_height="32sp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginRight="15dp"
-                    android:layout_weight="0"
-                    app:srcCompat="@android:drawable/ic_menu_search" />
+    <EditText
+            android:id="@+id/edt_university_name"
+            style="@style/LoginEditText"
+            android:hint="Nome da universidade"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_course_name"
+    />
 
-                <EditText
-                    android:id="@+id/edt_search_speciality"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:backgroundTint="@color/unimed_primary"
-                    android:ems="10"
-                    android:hint="Buscar por salas"
-                    android:inputType="textPersonName"
-                    android:padding="10dp"
-                    android:shadowColor="#BF5959"
-                    android:textColor="@color/unimed_primary"
-                    android:textColorHighlight="#E62A2A"
-                    android:textColorHint="@color/unimed_primary" />
+    <EditText
+            android:id="@+id/edt_event_inicial_date"
+            style="@style/LoginEditText"
+            android:inputType="date"
+            android:hint="Data de início"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_university_name"
+    />
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="2"
-                    android:text="Filtrar"
-                    android:textSize="9sp" />
+    <EditText
+            android:id="@+id/edt_event_final_date"
+            style="@style/LoginEditText"
+            android:inputType="date"
+            android:hint="Data de fim"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_event_inicial_date"
+    />
 
-            </LinearLayout>
+    <EditText
+            android:id="@+id/edt_event_inicial_time"
+            style="@style/LoginEditText"
+            android:inputType="time"
+            android:hint="Horário de início"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_event_final_date"
+    />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    <EditText
+            android:id="@+id/edt_event_final_time"
+            style="@style/LoginEditText"
+            android:inputType="time"
+            android:hint="Horário de término"
+            app:layout_constraintStart_toStartOf="@id/registrationContainerComponents"
+            app:layout_constraintEnd_toEndOf="@id/registrationContainerComponents"
+            app:layout_constraintTop_toBottomOf="@id/edt_event_inicial_time"
+    />
 
-                <TextView
-                    android:id="@+id/text_name_user2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Salas"
-                    android:textColor="@color/unimed_primary"
-                    android:textSize="24dp" />
-
-                <GridView
-                    android:id="@+id/gridview_home_rooms"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30dp"
-                    android:layout_weight="1"
-                    android:numColumns="auto_fit"
-                    android:scrollbarAlwaysDrawHorizontalTrack="true"
-                    android:scrollbars="horizontal" >
-
-                </GridView>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </androidx.gridlayout.widget.GridLayout>
+    <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_add_event"
+            style="@style/LoginButton"
+            android:text="@string/cadastrar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/edt_event_final_time"
+            android:layout_marginTop="64dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
